# hot_dog

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-build.yml
assets/: main.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
