[package]
name = "hot_dog"
version = "0.1.0"
authors = ["Kurt Fehlhauer <kfehlhau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.35.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
true = { version = "0.1.0", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]
true = ["dep:true"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
